[package]
name = "e57-to-las"
description = "Convert E57 point cloud files to LAS"
version = "0.9.0"
readme = "README.md"
license = "MIT"
edition = "2024"
homepage = "https://github.com/nivalis-studio/e57-to-las"
repository = "https://github.com/nivalis-studio/e57-to-las"
keywords = ["e57", "lidar", "pointclouds", "laserscanning", "geospatial"]
categories = ["science::geo"]
authors = ["pnodet <paul.nodet@gmail.com>", "pnwa <pnwa@icloud.com>"]
exclude = ["/examples"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
las = { version = "0.9.6" }
e57 = { version = "0.11.10" }
thiserror = { version = "2.0.16" }

[dev-dependencies]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
