[package]
name = "e57-to-las"
description = "Convert E57 point cloud files to LAS"
version = "0.9.0"
readme = "README.md"
license = "MIT"
edition = "2024"
homepage = "https://github.com/nivalis-studio/e57-to-las"
repository = "https://github.com/nivalis-studio/e57-to-las"
keywords = ["e57", "lidar", "pointclouds", "laserscanning", "geospatial"]
categories = ["science::geo"]
authors = ["pnodet <paul.nodet@gmail.com>", "pnwa <pnwa@icloud.com>"]
exclude = ["/examples"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
las = { version = "0.9.6" }
e57 = { version = "0.11.12", features = ["crc32c"] }
thiserror = { version = "2.0.16" }
flume = { version = "0.11.1" }

num_cpus = { version = "1.17.0", optional = true }

serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145" }
clap = { version = "4.5.53", features = ["derive"] }

[features]
default = ["parallel"]
parallel = ["num_cpus"]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
