[workspace]
resolver = "2"
members = [
    "core",
    "cli",
]

[workspace.package]
version = "0.9.0"
edition = "2024"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/nivalis-studio/e57-to-las"
repository = "https://github.com/nivalis-studio/e57-to-las"
authors = ["pnodet <paul.nodet@gmail.com>", "pnwa <pnwa@icloud.com>"]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
