[package]
name = "e57-to-las"
description = "Convert E57 point cloud files to LAS"
version.workspace = true
readme.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["e57", "lidar", "pointclouds", "laserscanning", "geospatial"]
categories = ["science::geo"]
exclude = ["/examples"]

[dependencies]
las = { version = "0.9.6" }
e57 = { version = "0.11.12", features = ["crc32c"] }
thiserror = { version = "2.0.16" }
flume = { version = "0.11.1" }

num_cpus = { version = "1.17.0", optional = true }

[features]
default = ["parallel"]
parallel = ["num_cpus"]
